2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve and cleanup Results in hdoc toolchain.

	* scribo/primitive/extract/non_text_hdoc.hh: Make parameters
	depend on the image size.

	* scribo/toolchain/internal/content_in_hdoc_functor.hh: Add new
	filters.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/primitive/extract/lines_h_thick_and_thin.hh: Improve
	result quality.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new hooks in toolchain functors.

	* toolchain/internal/toolchain_functor.hh: Here.

	* toolchain/internal/content_in_doc_functor.hh,
	* toolchain/internal/content_in_hdoc_functor.hh,
	* toolchain/internal/text_in_doc_functor.hh,
	* toolchain/internal/text_in_doc_preprocess_functor.hh: Make use
	of them.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/util/component_precise_outline.hh: New. Precise component
	outline extraction.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new element filters.

	* scribo/filter/images_in_paragraph.hh,
	* scribo/filter/paragraphs_bbox_overlap.hh,
	* scribo/filter/paragraphs_in_image.hh,
	* scribo/filter/separators_in_element.hh,
	* scribo/filter/separators_in_paragraph.hh: New.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Add util::box_intersection.

	* scribo/util/box_intersection.hh: New.

	* scribo/filter/object_links_bbox_overlap.hh: Make use of this new
	routine.

2011-05-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Various small fixes in Scribo.

	* scribo/core/paragraph_info.hh: Add validity information.

	* scribo/core/tag/line.hh: Fix guard.

	* scribo/debug/line_info_image.hh: Use is_textline().

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh: Check paragraph
	validity.

	* scribo/primitive/extract/alignments.hh,
	* scribo/primitive/extract/lines_pattern.hh,
	* scribo/primitive/extract/separators_nonvisible.hh,